# Katas

./: .gitignore  CSharp.cs  Katas.sln  Kyu6.cs  Kyu7.cs  Program.cs
Katas.UnitTest/: Katas.UnitTest.csproj  Kyu6SpinwordsTests.cs
src/: Katas.csproj  Katas.sln  Kyu6.cs  Kyu7.cs  Program.cs
src/AlgorithmPractice/: MyHashMap.cs  Program.cs
src/AlgorithmPractice.UnitTest/: AlgorithmPractice.UnitTest.csproj  Test1.cs
src/AzureTestFunctionKatas/: AzureFunctions.cs  AzureTestFunctionKatas.csproj  AzureTestFunctionKatas.sln  Program.cs  PythagoreanTheorem.cs  QuadraticEquationLogic.cs  appsettings.json
src/BicepPractice/: main.bicep
src/Katas/: Katas.csproj  Katas.sln  Kyu3.cs  Kyu4.cs  Kyu5.cs  Kyu6.cs  Kyu7.cs  Kyu8.cs  Node.cs  Program.cs  Quicksort.cs
src/Katas.UnitTest/: Katas.UnitTest.csproj  Kyu3Tests.cs  Kyu4Tests.cs  Kyu5Tests.cs  Kyu6Tests.cs  Kyu7Tests.cs  Kyu8Tests.cs
src/LeetCode/: EasyProblem.cs  MediumProblem.cs  Program.cs
src/LeetCode.UnitTest/: EasyTests.cs  LeetCode.UnitTest.csproj  MediumTests.cs
src/PowershellKatas/: EvenOrOdd.ps1  TwoSum.ps1  (+1 more)
src/PythonKatas/: pyproject.toml
src/PythonKatas/PythonSRC/: PythonKatas.sln
src/PythonKatas/PythonSRC/PythonApplication1/: PythonApplication1.py  PythonApplication1.pyproj
src/PythonKatas/src/Kyu6/: count_chars.py  find_nb.py  longest_consecutive.py
src/PythonKatas/src/Kyu7/: Isogram.py  series_sum.py
src/PythonKatas/src/PythonApplication1/: hamming_numbers.py
src/PythonKatas/tests/: test_count_chars.py  test_find_nb.py  test_longest_consecutive.py  test_series_sum.py
(+121 files in other folders)
