[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pythonKatas"
version = "0.0.1"
authors = [
  { name="Andrew Palmer", email="ahpalmer72@outlook.com" },
]
description = "Daily Python Coding Practice"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ahpalmer/Katas"